# rust-micro

./: .env  .env.dev  .env.production.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.prod.yml
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
deploy/: README.md
services/api-gateway/: .env  .env.dev  Cargo.toml  Dockerfile
services/api-gateway/src/: app.rs  config.rs  error.rs  handlers.rs  jwt.rs  main.rs  nats.rs  request_id.rs  routes.rs  telemetry.rs
services/api-gateway/src/config/: mod.rs
services/api-gateway/src/middleware/: auth.rs  cors.rs
services/api-gateway/src/routes/: system.rs
services/api-gateway/src/routes/auth/: mod.rs  nats.rs  router.rs
services/api-gateway/src/routes/news/: dto.rs  mod.rs  nats.rs  router.rs
services/api-gateway/src/routes/system/: router.rs
services/api-gateway/src/routes/users/: mod.rs  nats.rs  router.rs
services/news-service/: .env  .env.dev  Cargo.toml
services/news-service/migrations/: 20260303121046_create_articles.sql
services/news-service/src/: config.rs  main.rs
services/news-service/src/news/: handlers.rs  mod.rs  nats.rs  repository.rs
services/user-service/: .env  .env.dev  Cargo.toml
services/user-service/migrations/: 20260303170000_create_users.sql
services/user-service/src/: config.rs  main.rs
services/user-service/src/user/: handlers.rs  mod.rs  nats.rs  password.rs  repository.rs
