[workspace]
members = [
    "services/api-gateway",
    "services/user-service",
    "services/news-service",
    "crates/common",
    "crates/contracts",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
