[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
async-nats = "0.39"
axum = "0.8"
contracts = { path = "../../crates/contracts" }
dotenvy = "0.15"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
