[package]
name = "user-service"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
async-nats = "0.39"
contracts = { path = "../../crates/contracts" }
dotenvy = "0.15"
futures = "0.3"
serde_json = "1"
  sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid"] }
tokio.workspace = true
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v7"] }
